fix drop down menu on mobile size

--- a/frontend/src/components/Navibar.css
+++ b/frontend/src/components/Navibar.css
@@ -1,6 +1,6 @@
 .nav-color {
     background-color: rgb(255, 235, 51) !important;
-    height: 100px;
+   
     
   }
   .nav-font {
